# BSplineX-python

./: .gitignore  .gitmodules  BSplineX.i  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish_python_package.yml  run-tests.yml
examples/: ex_derivative.py  ex_evaluate.py  ex_fit.py  ex_fit_ref.py  ex_interpolate.py
tests/: gen_data.py  reference.py  test_bspline.py  test_dummy.py  test_interface.py  utils.py
wrapper/bsplinex/: __init__.py  additional_conditions.py  bspline.py  bspline_factory.py  core.py  interpolant_condition.py  interpolating_condition.py
